generated-out/docking/dear-imgui-raw-docking/src/DearImGui/Raw/ImGuiListClipper.hsc

{-# LANGUAGE CApiFFI #-}
{-# LANGUAGE PatternSynonyms #-}
{-# OPTIONS_GHC -Wno-unused-imports #-}

-- This file was generated by dear-bindings-ffi. Do not edit by hand.
-- Haskell function names: lower the first character of the C name.
-- e.g. ImGui_Begin -> imGui_Begin

module DearImGui.Raw.ImGuiListClipper where

import Foreign.C.String (CString)
import Foreign.C.Types
import Foreign.Marshal.Alloc (alloca)
import Foreign.Marshal.Utils (with)
import Foreign.Ptr (FunPtr, Ptr)
import Foreign.Storable (Storable (..))
import Data.Int (Int8, Int16, Int32, Int64)
import Data.Word (Word8, Word16, Word32, Word64)
import DearImGui.Raw.Types

#include "dcimgui_nodefaultargfunctions.h"

-- functions

-- C: void Begin(ImGuiListClipper* self, int items_count, float items_height)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiListClipper_Begin"
  imGuiListClipper_Begin :: (Ptr ImGuiListClipper) -> CInt -> CFloat -> IO ()
-- C: void End(ImGuiListClipper* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiListClipper_End"
  imGuiListClipper_End :: (Ptr ImGuiListClipper) -> IO ()
-- C: void IncludeItemByIndex(ImGuiListClipper* self, int item_index)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiListClipper_IncludeItemByIndex"
  imGuiListClipper_IncludeItemByIndex :: (Ptr ImGuiListClipper) -> CInt -> IO ()
-- C: void IncludeItemsByIndex(ImGuiListClipper* self, int item_begin, int item_end)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiListClipper_IncludeItemsByIndex"
  imGuiListClipper_IncludeItemsByIndex :: (Ptr ImGuiListClipper) -> CInt -> CInt -> IO ()
-- C: void SeekCursorForItem(ImGuiListClipper* self, int item_index)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiListClipper_SeekCursorForItem"
  imGuiListClipper_SeekCursorForItem :: (Ptr ImGuiListClipper) -> CInt -> IO ()
-- C: bool Step(ImGuiListClipper* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiListClipper_Step"
  imGuiListClipper_Step :: (Ptr ImGuiListClipper) -> IO CBool
